--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(available_sdio)
 export(available_spd_zarr_zips)
 export(do_tx_to_ext)
 export(getZarrArrayPath)
+export(get_demo_SD)
 export(mask)
 export(merfish_demo_path)
 export(path_to_10x_xen_demo)
